// Copyright 2020 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package ufs.config;

option go_package = "infra/unifiedfleet/app/config";

// Config is the configuration data served by luci-config for this app.
message Config {
  string luci_config_service = 1;
  OSNetworkConfig cros_network_config = 2;
  string bucket_name = 3;
  string machine_db_config_service = 4;
  string machine_db_host = 7;
  string cros_inventory_host = 5;
  string self_storage_bucket = 6;
  PubSub hart = 8;
  string sheet_service_account = 9;
  // The hostname of drone-queen service to push inventory to.
  string queen_service = 10;
  // cron job for dronequeen push.
  bool enable_dronequeen_push = 11;
  // cron job for Inv2 to UFS sync(MachineLSE/Asset).
  bool disable_inv2_sync = 12;
}

message OSNetworkConfig {
  string gitiles_host = 1;
  string project = 2;
  string branch = 3;

  message OSNetworkTopology {
    string name = 1;
    string remote_path = 2;
    string sheet_id = 3;
  }

  repeated OSNetworkTopology cros_network_topology = 4;
}

message PubSub {
  string project = 1;
  string topic = 2;
}
